--- a/src/app/components/gainers-view-date/gainers-view-date.html
+++ b/src/app/components/gainers-view-date/gainers-view-date.html
@@ -116,6 +116,15 @@
         <p class="text-gray-600 dark:text-gray-400">
           Loading market data for {{ selectedDate | date : 'mediumDate' }}...
         </p>
+        @if (loadingProgress > 0) {
+        <div class="w-64 bg-gray-200 dark:bg-gray-700 rounded-full h-2.5">
+          <div
+            class="bg-blue-600 h-2.5 rounded-full transition-all duration-300"
+            [style.width.%]="loadingProgress"
+          ></div>
+        </div>
+        <p class="text-sm font-semibold text-blue-600 dark:text-blue-400">{{ loadingProgress }}%</p>
+        }
       </div>
     </div>
 
