--- a/src/app/components/stock-gainers/stock-gainers.html
+++ b/src/app/components/stock-gainers/stock-gainers.html
@@ -186,8 +186,9 @@
           <tbody class="bg-white dark:bg-gray-800 divide-y divide-gray-200 dark:divide-gray-700">
             <tr
               *ngFor="let stock of stockData.stocks; trackBy: trackByStock"
-              [ngClass]="getChangeBgClass(stock.changePercent)"
               class="hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors duration-150"
+              [class.bg-green-50]="stock.changePercent > 10"
+              [class.bg-green-25]="stock.changePercent > 5 && stock.changePercent <= 10"
             >
               <td class="px-6 py-4 whitespace-nowrap">
                 <div class="text-sm font-medium text-gray-900 dark:text-white">
@@ -202,7 +203,14 @@
                 </span>
               </td>
               <td class="px-6 py-4 whitespace-nowrap">
-                <span [ngClass]="getChangeClass(stock.changePercent)" class="text-sm">
+                <span
+                  class="text-sm"
+                  [class.text-green-700]="stock.changePercent > 10"
+                  [class.font-bold]="stock.changePercent > 10"
+                  [class.text-green-600]="stock.changePercent > 5 && stock.changePercent <= 10"
+                  [class.font-semibold]="stock.changePercent > 5 && stock.changePercent <= 10"
+                  [class.text-green-500]="stock.changePercent <= 5"
+                >
                   +{{ stock.changePercent.toFixed(2) }}%
                 </span>
               </td>
