--- a/src/app/components/gainers-view-date/gainers-view-date.html
+++ b/src/app/components/gainers-view-date/gainers-view-date.html
@@ -464,12 +464,16 @@
                         class="text-gray-700 dark:text-gray-300 break-words"
                         [class.line-clamp-2]="!company.expanded"
                         [title]="company.comments"
+                        [attr.id]="'comment-' + company.ticker_symbol"
                       >
                         {{ company.comments }}
                       </p>
                       @if (company.comments.length > 100) {
                       <button
                         (click)="toggleExpanded(company); $event.stopPropagation()"
+                        [attr.aria-expanded]="company.expanded"
+                        [attr.aria-controls]="'comment-' + company.ticker_symbol"
+                        aria-label="Toggle comment visibility"
                         class="text-xs text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 font-medium mt-1"
                       >
                         {{ company.expanded ? 'Show less' : 'Show more' }}
