--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,23 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
-
-  /* Line clamping utility using -webkit-box properties
-   * Browser Support: These properties are well-supported in modern browsers:
-   * - Chrome/Edge: Full support
-   * - Firefox: Full support (since Firefox 68)
-   * - Safari: Full support
-   * Note: -webkit-box-orient is non-standard but widely supported
-   * For future-proofing, standard line-clamp may be used when browser support improves
-   */
-  .line-clamp-2 {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-  }
-}
+/* Using Tailwind's official line-clamp utilities via plugin */
 
 // Include theming for Angular Material with `mat.theme()`.
 // This Sass mixin will define CSS variables that are used for styling Angular Material
