--- a/src/styles.scss
+++ b/src/styles.scss
@@ -131,12 +131,12 @@ html.dark ::-webkit-scrollbar-thumb:hover {
 
 @keyframes slide-up {
   from {
-    transform: translate(-50%, 100%);
+    transform: translateY(10px);
     opacity: 0;
   }
 
   to {
-    transform: translate(-50%, 0);
+    transform: translateY(0);
     opacity: 1;
   }
 }
